# RayTracing

./: CMakeLists.txt  DoubleComparison.h  Plane.cpp  Plane.h  Primitives.cpp  Primitives.h  README.md  StageObjects.cpp  StageObjects.h  Utilities.cpp  Utilities.h  double_comparison.h  lighting.cpp  lighting.h  main.cpp  objects_input.txt  plane.cpp  plane.h  primitives.cpp  primitives.h  profiler.h  scene_objects.cpp  scene_objects.h  screen.cpp  screen.h  screen_input.txt  utilities.cpp  utilities.h
